<resources>
    <string name="app_name">Perfect Invernadero</string>
    <string name="action_settings">Settings</string>
    <string name="val">NOMBRE:</string>
    <string name="nreg">ID:</string>
    <string name="ins">Insertar</string>
    <string name="act">Actualizar</string>
    <string name="elim">Eliminar</string>
    <string name="list">Listar</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>

